--- a/index.html
+++ b/index.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Amazon</title>
 </head>
 
 <body>
-    <section id="header">
-        <div id="nav">
-            <ul>
-                <img src="amazon-logo.jpg" alt="logo">
-                <li class="line1">Delivery to</li>
-                <li class="line2">Pakistan</li>
-                <li>
-                    <input type="text" placeholder="Search Amazon">
-                </li>
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <span >
-                    <li class="line1">Hello,Sign in </li>
-                    <li class="line2">Account & lists</li>
-                </span>
-                <span>
-                    <li class="line1">Return</li>
-                    <li class="line2">& Order</li>
-                </span>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
+    <header>
+        <div class="nav-bar">
+            <div class="nav-logo border">
+                <div class="logo"></div>
+            </div>
+
+            <div class="nav-address border">
+            <p class>Deliver to </p>
+            <div class="add-icon">
+            <i class="fa-solid fa-location-dot"></i>
+            <h5>Pakistan</h5>
+            </div>
+            </div>
+
+            <div class="search-Bar">
+            <select  class="selection">
+                <option>All</option>
+            </select>
+            <input placeholder="  Search Amazon" class="searchInput" >
+            <div class="search-Icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            </div>
+
+            <div class="nav-signIn border">
+            <p><span>Hello, Sign in</span></p>
+            <p class="sec-line">Account & Lists</p>
+            </div>
+
+            <div class="nav-signIn border">
+            <p><span>Returns</span></p>
+            <p class="sec-line">& Orders</p>
+            </div>
+
+            <div class="cart-logo border">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <p class="cart">Cart</p>
+            </div>
+        </div>  
+    </header>
+
     </section>
 </body>
+
 </html>
