--- a/index.html
+++ b/index.html
@@ -4,54 +4,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Amazon</title>
 </head>
 
 <body>
-    <header>
-        <div class="nav-bar">
-            <div class="nav-logo border">
-                <div class="logo"></div>
+    <div class="main">
+        <header>
+            <div class="nav-bar">
+                <div class="nav-logo border">
+                    <div class="logo"></div>
+                </div>
+
+                <div class="nav-address border">
+                    <p class>Deliver to </p>
+                    <div class="add-icon">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <h5>Pakistan</h5>
+                    </div>
+                </div>
+
+                <div class="search-Bar">
+                    <select class="selection">
+                        <option>All</option>
+                    </select>
+                    <input placeholder="  Search Amazon" class="searchInput">
+                    <div class="search-Icon">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                </div>
+
+                <div class="nav-signIn border">
+                    <p><span>Hello, Sign in</span></p>
+                    <p class="sec-line">Account & Lists</p>
+                </div>
+
+                <div class="nav-signIn border">
+                    <p><span>Returns</span></p>
+                    <p class="sec-line">& Orders</p>
+                </div>
+
+                <div class="cart-logo border">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <p class="cart">Cart</p>
+                </div>
             </div>
 
-            <div class="nav-address border">
-            <p class>Deliver to </p>
-            <div class="add-icon">
-            <i class="fa-solid fa-location-dot"></i>
-            <h5>Pakistan</h5>
-            </div>
-            </div>
+            <div class="nav-bar2 ">
+                <div class="menu border">
+                    <i class="fa-solid fa-bars"></i>
+                    <span>All</span>
+                </div>
 
-            <div class="search-Bar">
-            <select  class="selection">
-                <option>All</option>
-            </select>
-            <input placeholder="  Search Amazon" class="searchInput" >
-            <div class="search-Icon">
-            <i class="fa-solid fa-magnifying-glass"></i>
+                <a href="#" class="border">Today's Deal</a>
+                <a href="#" class="border">Customer Service</a>
+                <a href="#" class="border">Registry</a>
+                <a href="#" class="border">Gift Cards</a>
+                <a href="#" class="border">Sell</a>
             </div>
-            </div>
+        </header>
 
-            <div class="nav-signIn border">
-            <p><span>Hello, Sign in</span></p>
-            <p class="sec-line">Account & Lists</p>
-            </div>
+        <div class="heroSection">
+            <p>You are on Amazon.com. You can also shop on Amazon Pakistan for millions of products with fast local
+                delivery. <a href="#"> Click here to go to amazon.in</a> </p>
+        </div>
 
-            <div class="nav-signIn border">
-            <p><span>Returns</span></p>
-            <p class="sec-line">& Orders</p>
+        <div class="products">
+            <div class="box">
+                <div class="box-content">
+                    <h2>Deals in PCs</h2>
+                    <div class="box-Img" style="background-image: url('./mirror.jpg');"></div>
+                    <a>Shop Now</a>
+                </div>
             </div>
-
-            <div class="cart-logo border">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <p class="cart">Cart</p>
+            <div class="box">
+                <div class="box-content">
+                    <h2>Deals in PCs</h2>
+                    <div class="box-Img" style="background-image: url('./pillow.jpg');"></div>
+                    <a>Shop Now</a>
+                </div>
             </div>
-        </div>  
-    </header>
-
-    </section>
+            <div class="box">
+                <div class="box-content">
+                    <h2>Deals in PCs</h2>
+                    <div class="box-Img" style="background-image: url('./book.jpg');"></div>
+                    <a>Shop Now</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-content">
+                    <h2>Deals in PCs</h2>
+                    <div class="box-Img" style="background-image: url('./tree.jpg');"></div>
+                    <a>Shop Now</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-content">
+                    <h2>Deals in PCs</h2>
+                    <div class="box-Img" style="background-image: url('./clothes.jpg');"></div>
+                    <a>Shop Now</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-content">
+                    <h2>Deals in PCs</h2>
+                    <div class="box-Img" style="background-image: url('./flower.jpg');"></div>
+                    <a>Shop Now</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-content">
+                    <h2>Deals in PCs</h2>
+                    <div class="box-Img" style="background-image: url('./shirt.jpg');"></div>
+                    <a>Shop Now</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-content">
+                    <h2>Deals in PCs</h2>
+                    <div class="box-Img" style="background-image: url('./cpu-img.jpg');"></div>
+                    <a>Shop Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
