--- a/index.html
+++ b/index.html
@@ -130,6 +130,105 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer">
+            <div class="footer1">Back to top</div>
+            <div class="footer2">
+                <div class="info">
+                    <h3>Get to Know Us</h3>
+                    <ul>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">About Amazon</a></li>
+                        <li><a href="#">Investor Relations</a></li>
+                        <li><a href="#">Amazon Devices</a></li>
+                        <li><a href="#">Amazon Science</a></li>
+                    </ul>
+                </div>
+                <div class="info">
+                    <h3>Make Money with Us</h3>
+                    <ul>
+                        <li><a href="#">Sell products on Amazon</a></li>
+                        <li><a href="#">Sell on Amazon Business</a></li>
+                        <li><a href="#">Sell apps on Amazon</a></li>
+                        <li><a href="#">Become an Affiliate</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">About Amazon</a></li>
+                        <li><a href="#">Investor Relations</a></li>
+                        <li><a href="#">Amazon Devices</a></li>
+                        <li><a href="#">Amazon Science</a></li>
+                    </ul>
+                </div>
+
+                <div class="info">
+                    <h3>Amazon Payment Products</h3>
+                    <ul>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">About Amazon</a></li>
+                        <li><a href="#">Investor Relations</a></li>
+                        <li><a href="#">Amazon Devices</a></li>
+                        <li><a href="#">Amazon Science</a></li>
+                    </ul>
+                </div>
+
+                <div class="info">
+                    <h3>Let US Help You</h3>
+                    <ul>
+                        <li><a href="#">Amazon and COVID-19</a></li>
+                        <li><a href="#">Your Account</a></li>
+                        <li><a href="#">Your Orders</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">About Amazon</a></li>
+                        <li><a href="#">Investor Relations</a></li>
+                        <li><a href="#">Amazon Devices</a></li>
+                        <li><a href="#">Help</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer3">
+            <img src="./Amazon-Logo-Black.jpg" alt="">
+            <div class="currency">
+            <p class="border">English</p>
+            <p class="border">USD-U.S. Dollar</p>
+            <p class="border">United State</p>
+            </div>
+            </div>
+
+            <div class="footer4">
+                <div class="AboutAmazon">
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                <div class="footbox"><a href="#">Amazon Music <span>Stream Millions of Songs</span></a></div>
+                
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 
